Added more publications, DOI URLs

--- a/references.bib
+++ b/references.bib
@@ -9,7 +9,7 @@
   pages={1--19},
   year={2016},
   publisher={BioMed Central},
-  url={https://link.springer.com/article/10.1186/s13059-016-0881-8}
+  url={https://doi.org/10.1186/s13059-016-0881-8}
 }
 
 @article{koch2018beginner,
@@ -21,7 +21,7 @@
   pages={145--157},
   year={2018},
   publisher={American Thoracic Society},
-  url={https://www.atsjournals.org/doi/full/10.1165/rcmb.2017-0430TR}
+  url={https://doi.org/10.1165/rcmb.2017-0430TR}
 }
 
 @article{marioni2008rna,
@@ -44,7 +44,8 @@
   number={6},
   pages={839--851},
   year={2016},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Lab},
+  url={https://doi.org/10.1261/rna.053959.115}
 }
 
 @article{zhao2018rnaseqsamplesize,
@@ -55,7 +56,8 @@
   number={1},
   pages={1--8},
   year={2018},
-  publisher={BioMed Central}
+  publisher={BioMed Central},
+  url={https://doi.org/10.1186/s12859-018-2191-5}
 }
 
 @article{hart2013calculating,
@@ -66,7 +68,8 @@
   number={12},
   pages={970--978},
   year={2013},
-  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA},
+  url={https://doi.org/10.1089/cmb.2012.0283}
 }
 
 @article{liu2014rna,
@@ -77,7 +80,8 @@
   number={3},
   pages={301--304},
   year={2014},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url={https://doi.org/10.1093/bioinformatics/btt688}
 }
 
 @article{gallego2014rna,
@@ -88,7 +92,8 @@
   number={1},
   pages={1--13},
   year={2014},
-  publisher={BioMed Central}
+  publisher={BioMed Central},
+  url={https://doi.org/10.1186/1741-7007-12-42}
 }
 
 @article{kim2012short,
@@ -99,7 +104,8 @@
   number={6},
   pages={893--895},
   year={2012},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  url={https://doi.org/10.1016/j.molcel.2012.05.036}
 }
 
 @article{zhao2015comparison,
@@ -110,7 +116,8 @@
   number={1},
   pages={1--14},
   year={2015},
-  publisher={BioMed Central}
+  publisher={BioMed Central},
+  url={https://doi.org/10.1186/s12864-015-1876-7}
 }
 
 @article{levin2010comprehensive,
@@ -121,7 +128,8 @@
   number={9},
   pages={709--715},
   year={2010},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://doi.org/10.1038/nmeth.1491}
 }
 
 @article{chhangawala2015impact,
@@ -132,7 +140,8 @@
   number={1},
   pages={1--10},
   year={2015},
-  publisher={BioMed Central}
+  publisher={BioMed Central},
+  url={https://doi.org/10.1186/s13059-015-0697-y}
 }
 
 @article{corley2017differentially,
@@ -143,7 +152,8 @@
   number={1},
   pages={1--13},
   year={2017},
-  publisher={BioMed Central}
+  publisher={BioMed Central},
+  url={https://doi.org/10.1186/s12864-017-3797-0}
 }
 
 @article{hsieh2019effect,
@@ -154,7 +164,8 @@
   number={1},
   pages={8304},
   year={2019},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  url={https://doi.org/10.1038/s41598-019-44499-3}
 }
 
 @article{wang2017comprehensive,
@@ -165,7 +176,8 @@
   number={3},
   pages={327--333},
   year={2017},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url={https://doi.org/10.1093/bioinformatics/btw625}
 }
 
 @article{fu2018elimination,
@@ -175,7 +187,8 @@
   volume={19},
   pages={1--14},
   year={2018},
-  publisher={Springer}
+  publisher={Springer},
+  url={https://doi.org/10.1186/s12864-018-4933-1}
 }
 
 @article{parekh2016impact,
@@ -186,7 +199,8 @@
   number={1},
   pages={25533},
   year={2016},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  url={https://doi.org/10.1038/srep25533}
 }
 
 @article{klepikova2017effect,
@@ -196,7 +210,8 @@
   volume={5},
   pages={e3091},
   year={2017},
-  publisher={PeerJ Inc.}
+  publisher={PeerJ Inc.},
+  url={https://doi.org/10.7717/peerj.3091}
 }
 
 @article{baruzzo2017simulation,
@@ -207,7 +222,8 @@
   number={2},
   pages={135--139},
   year={2017},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://doi.org/10.1038/nmeth.4106}
 }
 
 @article{dillies2013comprehensive,
@@ -218,7 +234,8 @@
   number={6},
   pages={671--683},
   year={2013},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url={https://doi.org/10.1093/bib/bbs046}
 }
 
 @article{evans2018selecting,
@@ -229,7 +246,8 @@
   number={5},
   pages={776--792},
   year={2018},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url={https://doi.org/10.1093/bib/bbx008}
 }
 
 @article{wagner2012measurement,
@@ -239,7 +257,8 @@
   volume={131},
   pages={281--285},
   year={2012},
-  publisher={Springer}
+  publisher={Springer},
+  url={https://doi.org/10.1007/s12064-012-0162-3}
 }
 
 @article{zhao2020misuse,
@@ -250,7 +269,8 @@
   number={8},
   pages={903--909},
   year={2020},
-  publisher={Cold Spring Harbor Lab}
+  publisher={Cold Spring Harbor Lab},
+  url={https://doi.org/10.1261/rna.074922.120}
 }
 
 @article{liu2016evaluation,
@@ -261,7 +281,8 @@
   number={1},
   pages={3--9},
   year={2016},
-  publisher={Page 2}
+  publisher={Page 2},
+  url={https://doi.org/10.11979/idtm.201601002}
 }
 
 @article{manimaran2016batchqc,
@@ -272,7 +293,8 @@
   number={24},
   pages={3836--3838},
   year={2016},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url={https://doi.org/10.1093/bioinformatics/btw538}
 }
 
 @article{seyednasrollah2015comparison,
@@ -283,7 +305,8 @@
   number={1},
   pages={59--70},
   year={2015},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  url={https://doi.org/10.1093/bib/bbt086}
 }
 
 @article{law2020guide,
@@ -292,7 +315,8 @@
   journal={F1000Research},
   volume={9},
   year={2020},
-  publisher={Faculty of 1000 Ltd}
+  publisher={Faculty of 1000 Ltd},
+  url={https://doi.org/10.12688/f1000research.27893.1}
 }
 
 @article{soneson2020exploremodelmatrix,
@@ -303,7 +327,8 @@
   number={512},
   pages={512},
   year={2020},
-  publisher={F1000 Research Limited}
+  publisher={F1000 Research Limited},
+  url={https://doi.org/10.12688/f1000research.24187.2}
 }
 
 @article{law2016rna,
@@ -312,7 +337,8 @@
   journal={F1000Research},
   volume={5},
   year={2016},
-  publisher={Faculty of 1000 Ltd}
+  publisher={Faculty of 1000 Ltd},
+  url={https://doi.org/10.12688/f1000research.9005.3}
 }
 
 @article{teng2016benchmark,
@@ -323,7 +349,8 @@
   number={1},
   pages={1--12},
   year={2016},
-  publisher={BioMed Central}
+  publisher={BioMed Central},
+  url={https://doi.org/10.1186/s13059-016-0940-1}
 }
 
 @online{elixirbelgium2022,
@@ -622,6 +649,28 @@
   url={https://doi.org/10.1093/bib/bbae095}
 }
 
+@article{kan2025comparison,
+  title={A comparison of integration methods for single-cell RNA sequencing data and ATAC sequencing data},
+  author={Kan, Yulong and Wang, Weihao and Qi, Yunjing and Zhang, Zhongxiao and Liang, Xikeng and Jin, Shuilin},
+  journal={Quantitative Biology},
+  volume={13},
+  number={2},
+  pages={e91},
+  year={2025},
+  publisher={Wiley Online Library},
+  url = {https://doi.org/10.1002/qub2.91}
+}
+
+@article{luecken2025defining,
+  title={Defining and benchmarking open problems in single-cell analysis},
+  author={Luecken, Malte D and Gigante, Scott and Burkhardt, Daniel B and Cannoodt, Robrecht and Strobl, Daniel C and Markov, Nikolay S and Zappia, Luke and Palla, Giovanni and Lewis, Wesley and Dimitrov, Daniel and others},
+  journal={Nature Biotechnology},
+  pages={1--6},
+  year={2025},
+  publisher={Nature Publishing Group US New York},
+  url={https://doi.org/10.1038/s41587-025-02694-w}
+}
+
 ## sc spatial -------------------------------------------------------------------------------
 
 @article{walker2022deciphering,
@@ -654,6 +703,18 @@
   year={2022},
   publisher={Nature Publishing Group US New York},
   url={https://www.nature.com/articles/s41592-022-01409-2}
+}
+
+@article{lim2025practical,
+  title={A practical guide for choosing an optimal spatial transcriptomics technology from seven major commercially available options},
+  author={Lim, Hyun Ju and Wang, Ye and Buzdin, Anton and Li, Xinmin},
+  journal={BMC genomics},
+  volume={26},
+  number={1},
+  pages={47},
+  year={2025},
+  publisher={Springer},
+  url={https://doi.org/10.1186/s12864-025-11235-3}
 }
 
 ## atacseq --------------------------------------------------------------------------------------
